# application_manager

./: .gitlab-ci.yml  LICENSE  README.md
.github/workflows/: custom-operators.yml  docker-ros.yml
application_manager/: README.md  package.xml  setup.cfg  setup.py
application_manager/application_manager/: application_manager.py  kubernetes_api.py  utils.py
application_manager/application_manager/applications/: object_detection_fusion_app.py
application_manager/application_manager/connections/: connection.py  mqtt_connection.py
application_manager/config/: params.yml
application_manager/launch/: application_manager.launch.py
application_manager_interfaces/: CMakeLists.txt  README.md  package.xml
application_manager_interfaces/action/: DeploymentRequest.action
application_manager_interfaces/msg/: Application.msg  ApplicationHeader.msg  Connection.msg  Topic.msg
application_manager_interfaces/msg/Applications/: ObjectDetectionFusionApp.msg
custom-operators/: .gitlab-ci.yml
custom-operators/mqtt-connection/: Dockerfile  README.md
custom-operators/mqtt-connection/custom-resource-definition/: mqtt_connection_crd.yml
custom-operators/mqtt-connection/operator/: config.yml  mqtt_connection_operator.py  utils.py
custom-operators/object-detection/: Dockerfile  README.md  requirements.txt
custom-operators/object-detection/custom-resource-definition/: object_detection_crd.yml
custom-operators/object-detection/operator/: helm_api.py  object_detection_operator.py
custom-operators/object-fusion/: Dockerfile  README.md
custom-operators/object-fusion/custom-resource-definition/: object_fusion_crd.yml
custom-operators/object-fusion/operator/: object_fusion_operator.py  utils.py
docker/: additional-pip-requirements.txt
example/: README.md
example/action_client/: package.xml  setup.py
example/action_client/action_client/: deployment_vehicle00_approaching.py  deployment_vehicle01_approaching.py  shutdown_vehicle00_leaving.py  shutdown_vehicle01_leaving.py
example/kubernetes/: .gitignore  createRegistry.sh  imagesPerNode.yml  setupCluster.sh
example/kubernetes/application-registry-interface/: application_registry_interface.yml
example/kubernetes/operators/: kopf_operator_mqtt.yml  kopf_operator_object_detection.yml  kopf_operator_object_fusion.yml
example/kubernetes/roles/: role-based-access-control.yml  service-account.yml
example/kubernetes/volumes/: mqtt_connection_operator_pvc.yml  object_detection_operator_pvc.yml  object_fusion_operator_pvc.yml
