<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>application_manager</name>
  <version>0.0.0</version>
  <description>Kubernetes workload definition based on incoming DeploymentRequest</description>

  <maintainer email="lukas.zanger@rwth-aachen.de">Lukas Zanger</maintainer>
  <author email="lukas.zanger@rwth-aachen.de">Lukas Zanger</author>

  <license>MIT</license>

  <depend>action_msgs</depend>
  <depend>application_manager_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
