<?xml version="1.0"?>
<package format="3">

  <name>application_manager_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces for messages interpreted by Application Manager</description>

  <maintainer email="lukas.zanger@rwth-aachen.de">Lukas Zanger</maintainer>
  <author email="lukas.zanger@rwth-aachen.de">Lukas Zanger</author>

  <license>MIT</license>

  <depend>action_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
